# cmake_pratique

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-single-platform.yml
Tedd/: CMakeLists.txt
Tedd/Resources/JSON/: Scene.json
Tedd/Resources/Shaders/: lights.frag
Tedd/include/: CircleRenderer.h  ColliderComponent.h  Component.h  ComponentFactory.h  Entity.h  GameScene.h  LightComponent.h  LightsManager.h  RectRenderer.h  RenderComponent.h  Scene.h  TransformComponent.h  UI.h  VertexRenderer.h  View.h  Window.h  json.hpp  pch.h  tools.h
Tedd/src/: CircleRenderer.cpp  ColliderComponent.cpp  Entity.cpp  GameScene.cpp  LightComponent.cpp  LightsManager.cpp  RectRenderer.cpp  RenderComponent.cpp  Scene.cpp  TransformComponent.cpp  UI.cpp  VertexRenderer.cpp  View.cpp  Window.cpp  main.cpp  tools.cpp
docs/: Doxyfile  Doxyfile.bak
docs/html/: doxygen.css  index.html  navtreedata.js
docs/latex/: refman.tex
include/: CMakeLists.txt  Maths.cpp  Maths.h  Vector2.cpp  Vector2.h  cmake_pratique.h
source/: CMakeLists.txt  cmake_pratique.cpp
